# Helium

./: .dir-locals.el  .gitignore  CMakeLists.txt  DONE.org  Doxyfile  Doxyfile.in  LICENSE.txt  Makefile  README.md  README.org  TODO.org  change.xml  docker-compose.yml  env_setup.sh  equivalence.xml  headers.conf  helium.conf  helium.conf.sample  helium.sample.xml  helium.xml  predefined_macros.h  report.org  setup-shell-load.sh  setup-shell.sh  setup.sh
back/: Common.cpp  Generator.cpp  HeaderManager.cpp  HeaderManager.h  Helper.cpp  Log.h  ThreadUtils.cpp  XMLUtils.cpp  _test_ast.cc  _test_snippet.cc  ast-printer.cc  ast.cc  ast.cc-bak  ast.h  ast_common.h  ast_cond.h  ast_helper.cc.back  ast_helper.h-bak  ast_internal.h  ast_iter.cc  ast_node.cc  ast_node.h  ast_stmt.h  cfg.cc  gene.cc  global_variable.h  header_resolver.cc  individual.cc.deprecated  point_of_interest.cc  population.h.back  random.cc.back  resolver.cc  resolver.h  slice_reader.cc  slice_reader.h  snippet.cc  snippet_registry.cc  special_type.cc-bak  system_resolver.cc.back  system_resolver.h  (+1 more)
benchmark/: .gitignore
client/: main.cc
lib/config/: .gitignore  configure.ac
src/: Analyzer.cpp  ArgParser.cpp  Builder.cpp  CMakeLists.txt  Config.cpp  Global.cpp  Helium.cpp  Logger.cpp  Reader.cpp  Segment.cpp  SegmentUnit.cpp  TODO.html  TODO.org  TestResult.cpp  Tester.cpp  Variable.cpp  _test_ast.cc  _test_ast_node.cc  _test_reader.cc  _test_resolver.cc  _test_segment.cc  _test_snippet.cc  _test_type.cc  analyzer.cc  analyzer.h  arg_parser.cc  arg_parser.h  ast.cc  ast.h  ast_helper.cc  ast_node.cc  ast_node.h  builder.cc  builder.h  callgraph.h  code_analyze.cc  code_analyze.h  code_gen.cc  code_gen.h  code_test.cc  (+74 more)
src/back/: _test_type.cc.back  header_dep.h-bak  population.cc.back  type.h.back
src/cmd/: CommentRemover.cpp  CondComp.cpp  Splitter.cpp
src/config/: arg_parser.cc  arg_parser.h  config.cc  config.h  options.cc  options.h
src/doc/: coding-stardard.org  design-experiment.org  design-poi.org  design-simplifying.org  tmp.org
src/parser/: AST.cpp  CFGBuilder.cpp  CMakeLists.txt  ClangParser.cpp  Distributor.cpp  Generator.cpp  GrammarPatcher.cpp  HeaderManager.cpp  IncludeManager.cpp  InstrumentPointVisitor.cpp  LevelVisitor.cpp  LibraryManager.cpp  NewGenerator.cpp  ParentIndexer.cpp  Parser.cpp  Printer.cpp  SourceLocation.cpp  SourceManager.cpp  SrcMLParser.cpp  SymbolTable.cpp  SymbolTableBuilder.cpp  TokenVisitor.cpp  Visitor.cpp  _test_ast.cc  _test_ast_node.cc  ast.cc  ast.h  ast_common.cc  ast_common.h  ast_cond.cc  ast_helper.cc  ast_internal.h  ast_iter.cc  ast_iter.h  ast_node.cc  ast_node.h  ast_stmt.cc  ast_stmt.h  ast_v2.cc  benchmark_manager.cc  (+33 more)
src/parser/model/: block.cc  do.cc  for.cc  function.cc  if.cc  stmt.cc  switch.cc  while.cc
src/resolver/: CMakeLists.txt  Ctags.cpp  HeaderSorter.cpp  IOResolver.cpp  Resolver.cpp  SnippetAction.cpp  SnippetV2.cpp  SystemResolver.cpp  _test_resolver.cc  _test_snippet.cc  cache.cpp  clangSnippet.cpp  global_variable.cc  global_variable.h  header_dep.cc  header_resolver.cc  header_resolver.h  header_sorter.cc  header_sorter.h  resolver.cc  resolver.h  resolver_header.cc  resolver_system.cc  snippet.cc  snippet.h  snippet_db.cc  snippet_db.h  snippet_registry.cc  system_resolver.cc  system_resolver.h  test_io_resolver.cpp
src/segment/: Segment.cpp  SegmentProcessUnit.cpp
src/snippet/: DefineSnippet.cpp  EnumSnippet.cpp  FunctionSnippet.cpp  Snippet.cpp  SnippetRegistry.cpp  StructureSnippet.cpp  TypedefSnippet.cpp  UnionSnippet.cpp  VariableSnippet.cpp
src/type/: CMakeLists.txt  Cache.cpp  ClangSnippet.cpp  EnumType.cpp  IOHelper.cpp  PrimitiveType.cpp  Snippet.cpp  SnippetAction.cpp  SnippetManager.cpp  StructureType.cpp  SystemType.cpp  Type.cpp  TypeFactory.cpp  UnionType.cpp  _new_char_star_var.c  _test-data-char-star-star-var.c  _test-data-char-star-var.c  _test_type.cc  argcv.cc  argv.cc  argv.h  char.cc  composite_type.cc  composite_type.h  corner.cc  corner.h  float.cc  input_spec.cc  input_spec.h  int.cc  io_helper.cc  io_helper.h  local_structure_type.cc  local_typedef_type.cc  primitive_type.cc  primitive_type.h  sequential_type.cc  sequential_type.h  special_type.cc  system_type.cc  (+10 more)
src/type-bak/: bool.cc  local_type.cc  type.h
src/type/data/: _new_B_star.c  _new_char_star_star_var.c  _test-data-char-var.c  libhelium.h
src/utils/: AggGraph.cpp  CMakeLists.txt  ColorUtils.cpp  Dom.cpp  DomUtil.cpp  Dot.cpp  Dump.cpp  FSUtils.cpp  FileUtil.cpp  Graph.cpp  HeliumOptions.cpp  Helper.cpp  Log.cpp  RandUtils.cpp  SrcmlUtil.cpp  StringUtil.cpp  StringUtils.cpp  Table.cpp  ThreadUtil.cpp  ThreadUtils.cpp  Utils.cpp  XMLDocReader.cpp  XMLNode.cpp  XMLNodeHelper.cpp  XMLUtils.cpp  color_utils.cc  color_utils.h  common.cc  csv.cc  csv.h  dot.cc  dot.h  dump.cc  fs_utils.cc  fs_utils.h  graph.cc  helium_options.cc  helper.cc  log.cc  log.h  (+11 more)
src/variable/: VariableFactory.cpp
src/workflow/: CMakeLists.txt  _test_reader.cc  analyzer.cc  analyzer.h  builder.cc  builder.h  code_analyze.cc  code_gen.cc  code_test.cc  code_test.h  context.cc  context.h  formula.cc  formula.h  generator.cc  generator.h  helium.cc  helium.h  query.cc  query.h  reader.cc  reader.h  resource.cc  resource.h  segment.cc  segment.h  tester.cc  tester.h
test/: CMakeLists.txt  boost_test_io_resolver.cpp-bak  test_SourceManager.cpp  test_generator.cpp  test_graph.cpp  test_main.cc  test_parser.cpp  test_programs.h  test_snippet.cpp
test/benchmark/: a.c  snippet.tag
test/benchmark/double-free/: README.org
test/benchmark/infinite-loop/: call.c  loop.c
test/benchmark/snippet/: a.h
test/cfgtest/: call.c  call2.c
test/data/snippet/src/: var.c
test/io/: README.org  char-star-var.sample.c  char-var.output.c  test.sh
test/script/: a.sh
test/simple/: poi.org
test/simple/assertion/: a.c  poi.org
test/simple/infinite/: a.c  poi.org
test/simple/nullderef/: a.c  poi.org
test/simple/paper-example/: a.c  poi.org
test/simple/remove/: a.c  poi.org
test/simple/simplebench/: a.c  poi.org
tools/: CMakeLists.txt  cfg-printer.cc
(+565 files in other folders)
