AC_INIT([foo], [2.0], [example@example.org])
AC_PREREQ(2.59)

dnl AM_INIT_AUTOMAKE

AC_PROG_CC





AC_HEADER_STDC                                                                                                                                                      
AC_CHECK_HEADERS(fcntl.h limits.h unistd.h stdint.h stdbool.h io.h windows.h sys/types.h sys/time.h stdlib.h stddef.h)


dnl ???
AC_C_CONST                                                                                                                                                          
AC_C_INLINE                                                                                                                                                         
AC_TYPE_SIZE_T                                                                                                                                                      
dnl dnl AC_CHECK_TYPE(bool, int)                                                                                                                                        
dnl AC_CHECK_TYPE(uchar, unsigned char)                                                                                                                                 
dnl AC_CHECK_TYPE(ushort, unsigned short)                                                                                                                               
dnl AC_CHECK_TYPE(uint, unsigned int)                                                                                                                                   
dnl AC_CHECK_TYPE(ulong, unsigned long)                                                                                                                                 
dnl AC_CHECK_TYPE(longlong, long long)                                                                                                                                  
dnl AC_CHECK_TYPE(ulonglong, unsigned long long)                                                                                                                        
dnl AC_CHECK_TYPE(ssize_t, int)                                                                                                                                         
dnl AC_CHECK_FUNCS(gettimeofday)                                                                                                                                        
dnl AC_CHECK_FUNCS(getrusage)



AC_CONFIG_HEADERS([config.h])
AC_OUTPUT
