add_library(HeliumUtils
        color_utils.cc
        dot.cc
        dump.cc
        fs_utils.cc
        log.cc
        new_thread.cc
        thread_utils.cc
        table.cc
        rand_utils.cc
        string_utils.cc
        utils.cc
        xml_utils.cc
        common.cc
        helium_options.cc
        helper.cc)
