add_library(HeliumUtils
  Utils.cpp
  Common.cpp
  Helper.cpp
  HeliumOptions.cpp
  
  Dot.cpp
  Graph.cpp
  AggGraph.cpp

  ColorUtils.cpp

  Dom.cpp
  XMLDocReader.cpp
  XMLNode.cpp
  XMLNodeHelper.cpp
  XMLUtils.cpp

  Dump.cpp
  Log.cpp

  Table.cpp

  FSUtils.cpp
  RandUtils.cpp
  StringUtils.cpp
  ThreadUtils.cpp
  )
